[mod] jvm options