@@ -6,6 +6,7 @@ ARG BASEX_VER=https://files.basex.org/releases/9.5/BaseX95.zip
 
 FROM $JDK_IMAGE  AS builder
 ARG BASEX_VER
+RUN echo 'using Basex: ' "$BASEX_VER"
 RUN apt-get update && apt-get install -y  unzip wget && \
     cd /srv && wget "$BASEX_VER" && unzip *.zip && rm *.zip
 
@@ -19,6 +20,8 @@ COPY --from=builder --chown=1000:1000 /srv/ /srv
 COPY  .basex /srv/basex/
 USER 1000
 ENV PATH=$PATH:/srv/basex/bin
+# JVM options e.g "-Xmx2048m "
+ENV BASEX_JVM="--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED"
 
 # 1984/tcp: API
 # 8984/tcp: HTTP
